style(button-link): improve text alignment and fix custom focus ring

--- a/components/button-link/css/_mixin.scss
+++ b/components/button-link/css/_mixin.scss
@@ -25,7 +25,7 @@
   @include utrecht-button--focus-visible;
 }
 
-@mixin utrecht-button-link--html-button {
+@mixin utrecht-button-link--html-a {
   &:hover {
     @include utrecht-button-link--hover;
   }
